--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,132 @@
-*{
-    background: beige;
+* {
+  background: beige;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "poppins", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+/* cool borders */
+:root {
+  --borderRed: 2px solid red;
+  --borderLime: 2px solid lime;
+  --borderPink: 2px solid pink;
+  --borderViolet: 2px solid violet;
+  --borderBlue: 2px solid blue;
+  --borderBlack: 4px solid black;
+  --borderOrange: 2px solid orange;
+  --borderIndigo: 2px solid indigo;
+  --borderWhite: 2px solid white;
+  --borderYellow: 2px solid yellow;
+  --borderPurple: 2px solid purple;
+  --borderBrown: 2px solid brown;
+  --borderGray: 2px solid gray;
+  --borderGreen: 2px solid green;
+  --borderAqua: 4px solid aqua;
+  --borderTurquoise: 2px solid turquoise;
+
+  --primary-color: #4891ff;
+  --light-color: #f4f4f6;
+  --dark-color: #111;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+ul {
+  list-style: none;
+}
+img {
+  max-width: 100%;
+}
+
+/* navbar */
+.navbar {
+  border: var(--borderAqua);
+  background: #fff;
+  padding: 20px;
+}
+
+.navbar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar .main-menu ul {
+  display: flex;
+}
+.navbar ul li a {
+  padding: 10px 20px;
+  display: block;
+  font-weight: 600;
+  transition: 0.5s;
+}
+
+.navbar ul li a:hover {
+  color: var(--primary-color);
+}
+
+.navbar ul li a i {
+  margin-right: 10px;
+}
+
+.navbar ul li:last-child a {
+  margin-left: 10px;
+}
+
+/* Utility Classes */
+
+.container {
+  border: var(--borderPurple);
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.container-sm {
+  border: var(--borderBlack);
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+/* buttons */
+
+.btn {
+  border: var(--borderRed);
+  display: inline-block;
+  padding: 13px 20px;
+  background: var(--light-color);
+  color: #333;
+  font-weight: 600;
+  text-decoration: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.btn:hover {
+  opacity: 0.8;
+}
+
+.btn-primary {
+  background: var(--primary-color);
+  color: #fff;
+}
+
+.btn-dark {
+  background: var(--dark-color);
+  color: #fff;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
 }
