--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 * {
-  background: beige;
+  /* background: beige; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -82,6 +82,20 @@ img {
   margin-left: 10px;
 }
 
+/* hero */
+.hero {
+  border: var(--borderRed);
+  margin-bottom: 50px;
+}
+
+.hero .container {
+  border: var(--borderBlack);
+  background: url("../images/hero-bg.png") no-repeat;
+  background-size: contain;
+  background-position: center bottom;
+  height: 550px;
+}
+
 /* Utility Classes */
 
 .container {
@@ -129,4 +143,41 @@ img {
 .btn-block {
   display: block;
   width: 100%;
+}
+
+/* text classes */
+
+.text-xxl {
+  font-size: 3rem;
+  line-height: 1.2;
+  font-weight: 600;
+  margin: 40px 0 20px;
+}
+.text-xl {
+  font-size: 2.2rem;
+  line-height: 1.4;
+  font-weight: normal;
+  margin: 40px 0 20px;
+}
+.text-lg {
+  font-size: 1.8rem;
+  line-height: 1.4;
+  font-weight: normal;
+  margin: 30px 0 20px;
+}
+.text-md {
+  font-size: 1.2rem;
+  line-height: 1.4;
+  font-weight: normal;
+  margin: 20px 0 20px;
+}
+.text-sm {
+  font-size: 0.9rem;
+  line-height: 1.4;
+  font-weight: normal;
+  margin: 10px 0 5px;
+}
+
+.text-center {
+  text-align: center;
 }
