--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,90 @@ img {
   height: 550px;
 }
 
+.hero .hero-content {
+  width: 70%;
+}
+
+.hero .hero-text {
+  width: 70%;
+  margin-bottom: 20px;
+}
+
+/* video */
+.video {
+  padding: 10px 0 40px;
+}
+
+.video-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.video-preview {
+  margin-bottom: 20px;
+}
+/* testimonials */
+.testimonials {
+  padding: 40px 0;
+}
+
+.testimonials .testimonials-heading {
+  width: 700px;
+  margin-bottom: 40px;
+}
+
+.testimonials-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.testimonials .card p:nth-child(2) {
+  margin-top: 30px;
+  font-weight: bold;
+}
+
+
+/* pricing */
+
+.pricing-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 50px;
+  gap: 30px;
+}
+
+.pricing .pricing-card-subheading {
+  border: var(--borderIndigo);
+  margin-bottom: 30px;
+}
+
+.pricing .pricing-card-price {
+  margin-bottom: 30px;
+  padding: 20px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+
+.pricing ul{
+  margin: 30px 0;
+}
+
+.pricing ul li{
+  margin-bottom: 20px;
+}
+
+.pricing ul li i{
+  margin-right: 10px;
+}
+
+.pricing .pricing-footer{
+  margin: 30px 0;
+}
+
+
+
 /* Utility Classes */
 
 .container {
@@ -112,6 +196,15 @@ img {
   padding: 0 15px;
 }
 
+
+/* card */
+.card {
+  background: #fff;
+  color: #000;
+  border-radius: 10px;
+  padding: 20px;
+}
+
 /* buttons */
 
 .btn {
@@ -121,6 +214,7 @@ img {
   background: var(--light-color);
   color: #333;
   font-weight: 600;
+  text-align: center;
   text-decoration: none;
   border-radius: 10px;
   cursor: pointer;
@@ -180,4 +274,26 @@ img {
 
 .text-center {
   text-align: center;
+}
+
+/* background */
+
+.bg-primary {
+  background: var(--primary-color);
+  color: #fff;
+}
+
+.bg-light {
+  background: var(--light-color);
+  color: #333;
+}
+
+.bg-dark {
+  background: var(--dark-color);
+  color: #fff;
+}
+
+.bg-black {
+  background: #000;
+  color: #fff;
 }
