--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,6 @@ img {
   font-weight: bold;
 }
 
-
 /* pricing */
 
 .pricing-grid {
@@ -161,24 +160,84 @@ img {
   border-bottom: 1px solid #ccc;
 }
 
-
-.pricing ul{
+.pricing ul {
   margin: 30px 0;
 }
 
-.pricing ul li{
+.pricing ul li {
   margin-bottom: 20px;
 }
 
-.pricing ul li i{
+.pricing ul li i {
   margin-right: 10px;
 }
 
-.pricing .pricing-footer{
+.pricing .pricing-footer {
   margin: 30px 0;
 }
 
+/* faq */
 
+.faq {
+  padding: 40px 0;
+}
+
+.faq .faq-group {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 20px;
+}
+
+.faq .faq-group .faq-group-header {
+  padding: 20px 0;
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.faq .faq-group .faq-group-header h4 {
+  font-weight: 600;
+  width: 95%;
+}
+
+.faq .faq-group .faq-group-header i {
+  position: absolute;
+  right: 0;
+  top: 35px;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.faq .faq-group .faq-group-body {
+  display: none;
+}
+
+.faq .faq-group .faq-group-body.open {
+  display: block;
+}
+
+.faq ul.faq-menu {
+  max-width: 400px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #ddd;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.faq ul.faq-menu li {
+  /* border: var(--borderBlack); */
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.faq ul.faq-menu li.active{
+  background: var(--primary-color);
+  color: #fff;
+}
 
 /* Utility Classes */
 
@@ -195,7 +254,6 @@ img {
   margin: 0 auto;
   padding: 0 15px;
 }
-
 
 /* card */
 .card {
